Wed May  5 09:13:46 2004  Carlos O'Ryan  <coryan@atdesk.com>

	* tao/tao.mpc:
	* tao/Auto_Functor.h:
	* tao/Auto_Functor.inl:
	* tao/Auto_Functor.cpp:
	  Moved the implementation to the ACE library.  Take advantage of
	  the 'using namespace' directive to preserve backwards
	  compatibility.

	* tao/Utils/Utils.mpc:
	* tao/Utils/Auto_Functor.h:
	  This header was dropped when the class template was moved up,
	  re-introduced said header file to recover backwards
	  compatibility.

Tue May  4 00:12:26 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushSupplier.cpp:

	  Include "tao/DynamicInterface/DII_CORBA_methods.h" first to
	  force CORBA::release(CORBA::Request...) prototype to be parsed
	  before TAO_Pseudo_{Var,Out}_T templates.  All required
	  non-dependent names must be parsed prior to the template in
	  question when using compilers like g++ 3.4.x.\

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Fault_Detector_T.cpp:

	  Include "ace/INET_Addr.h" to pull in ACE_INET_Addr class
	  declaration.

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/SCTP_Fault_Detector.cpp:

	  Fixed "TAO_HAS_SCIOP" is not defined warning exhibited by g++
	  3.4.

Mon May  3 13:15:51 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/mfc/server.mpc:
        * utils/NamingViewer/NamingViewer.mpc:

          Inhert from ace_mfc instead of mfc.

Sun May  2 17:04:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicInterface/DynamicInterface.mpc:
        * tao/Messaging/Messaging.mpc:
          Removed source and header section, let just MPC do its job
          determining which files are in the directory.

Sun May  2 13:44:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/SCIOP_Acceptor.cpp:
          Added include of tao/CDR.h to fix compile problems in sciop
          enabled builds.

Sat May  1 22:36:22 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * Makefile: